fix(dropdown): scrollbar background color (#708)

--- a/packages/core/src/mixins/_scrollbar.scss
+++ b/packages/core/src/mixins/_scrollbar.scss
@@ -16,7 +16,7 @@
   }
 
   &::-webkit-scrollbar-track {
-    background: transparent;
+    background: var(--tds-scrollbar-track-color);
   }
 
   &::-webkit-scrollbar-thumb {
